@@ -109,6 +109,12 @@ SC_TCL_EARLY_FLAGS
 
 SC_TCL_64BIT_FLAGS
 
+#--------------------------------------------------------------------
+#	Check endianness because we can optimize some operations
+#--------------------------------------------------------------------
+
+AC_C_BIGENDIAN
+
 #------------------------------------------------------------------------
 # If Tcl and Tk are installed in different places, adjust the library
 # search path to reflect this.
